--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 		</title>
 		{% block stylesheets %}
 			<link href="https://bootswatch.com/5/lumen/bootstrap.min.css" rel="stylesheet">
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrapicons.css">
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 		{% endblock %}
 	</head>
 	<body>
@@ -27,7 +27,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Features</a>
+							<a class="nav-link" href="{{ path('liste_typebatterie') }}">liste batterie</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Pricing</a>
@@ -50,6 +50,28 @@
 						<input class="form-control me-sm-2" type="search" placeholder="Search">
 						<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 					</form>
+					<ul class="navbar-nav me-auto">
+						{% if not
+is_granted('IS_AUTHENTICATED_FULLY') %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{path('app_login')}}">Se connecter
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{path('app_register')}}">S'inscrire
+								</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{path('app_logout')}}">
+									{{app.user.email}}
+									<i class="bi
+										bi-x-circle-fill"></i>
+								</a>
+							</li>
+						{% endif %}
+					</ul>
+
 				</div>
 			</div>
 		</nav>
